@@ -2897,8 +2897,14 @@ static int php_date_modify(zval *object, char *modify, size_t modify_len) /* {{{
 		dateobj->time->us = tmp_time->us;
 	}
 
-	if (tmp_time->have_zone && tmp_time->zone_type == TIMELIB_ZONETYPE_OFFSET) {
-		timelib_set_timezone_from_offset(dateobj->time, tmp_time->z);
+	/* Reset timezone to UTC if we detect a "@<ts>" modification */
+	if (
+		tmp_time->y == 1970 && tmp_time->m == 1 && tmp_time->d == 1 &&
+		tmp_time->h == 0 && tmp_time->i == 0 && tmp_time->s == 0 && tmp_time->us == 0 &&
+		tmp_time->have_zone && tmp_time->zone_type == TIMELIB_ZONETYPE_OFFSET &&
+		tmp_time->z == 0 && tmp_time->dst == 0
+	) {
+		timelib_set_timezone_from_offset(dateobj->time, 0);
 	}
 
 	timelib_time_dtor(tmp_time);
